# ClawTeam

./: .gitignore  INSTALL.md  README.md  __init__.py  clawteam  pyproject.toml  run.py
cli/: commands.py
scripts/: clawteam-agent  clawteam-wrapper  setup-clawteam.sh
spawn/: tmux_backend.py
