[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawteam"
version = "2.0.0"
description = "Multi-agent coordination CLI using OpenClaw local agent"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ClawTeam", email = "clawteam@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
clawteam = "clawteam.cli.commands:app"

[project.urls]
Homepage = "https://github.com/roycehwa/ClawTeam"
Repository = "https://github.com/roycehwa/ClawTeam"

[tool.setuptools.packages.find]
where = ["."]
include = ["clawteam*"]

[tool.setuptools.package-data]
clawteam = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
